Increase font size and fix alignment of header links (#459)

--- a/packages/reference/client/scss/60_components/_c-header.scss
+++ b/packages/reference/client/scss/60_components/_c-header.scss
@@ -1,42 +1,52 @@
 .c-header {
   &__account {
-    flex-basis: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-grow: 1;
     cursor: pointer;
     text-align: center;
     border-left: 1px solid $border-default;
 
+    @include breakpoint(mobile-tablet) {
+      flex-basis: 30%;
+    }
+
     @include breakpoint(desktop) {
-      flex-basis: 20%;
       order: 3;
       position: static;
       border: none;
+      padding-left: $global-spacing-unit;
+      padding-right: $global-spacing-unit;
     }
 
     a {
       font-size: 0.8em;
-      display: inline-block;
       padding-left: $global-spacing-unit-small;
+
+      @include breakpoint(desktop) {
+        font-size: 1em;
+      }
     }
 
     &-image {
-      display: inline-block;
-
-      img {
-        height: 27px;
-        width: 25px;
-      }
+      height: 25px;
+      width: 25px;
     }
   }
 
   &__minibag {
-    flex-basis: 30%;
     flex-grow: 1;
     border-left: 1px solid $border-default;
 
+    @include breakpoint(mobile-tablet) {
+      flex-basis: 30%;
+    }
+
     @include breakpoint(desktop) {
+      padding-left: $global-spacing-unit;
+      padding-right: $global-spacing-unit;
       order: 5;
-      flex-basis: 20%;
     }
   }
 
